--- a/index2.html
+++ b/index2.html
@@ -4,12 +4,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.min.css?_v=20230703185802"></link>
-  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230703185802"></script>
-  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230703185802"></script>
-  <script src="https://unpkg.com/@swup/preload-plugin@2?_v=20230703185802"></script>
-  <script src="files/script /tilt.js?_v=20230703185802"></script>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css?_v=20230703185802" rel="stylesheet"
+  <link rel="stylesheet" href="css/style.min.css?_v=20230704004757"></link>
+  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230704004757"></script>
+  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230704004757"></script>
+  <script src="https://unpkg.com/@swup/preload-plugin@2?_v=20230704004757"></script>
+  <script src="files/script /tilt.js?_v=20230704004757"></script>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230704004757" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css?_v=20230704004757" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <header>
@@ -315,44 +318,44 @@
           <div class="nav_bar">
             <div class="grid_bar">
               <!-- <div class='icon-scroll'></div> -->
-              <div class="gb_img gb_img_1 gb_img_border" data-target="img_mainbox_1"><picture><source srcset="img/red_friesa.webp" type="image/webp"><img src="img/red_friesa.jpg" alt=""></picture></div>
-              <div class="gb_img gb_img_2" data-target="img_mainbox_2"><picture><source srcset="img/aston_martin_main.webp" type="image/webp"><img src="img/aston_martin_main.jpg" alt=""></picture></div>
-              <div class="gb_img gb_img_3" data-target="img_mainbox_3"><picture><source srcset="img/Landing_Memoj.webp" type="image/webp"><img src="img/Landing_Memoj.jpg" alt=""></picture></div>
-              <div class="gb_img gb_img_4" data-target="img_mainbox_4"><picture><source srcset="img/Landing_org.webp" type="image/webp"><img src="img/Landing_org.jpg" alt=""></picture></div>
-              <div class="gb_img gb_img_5" data-target="img_mainbox_5"><picture><source srcset="img/Model_main.webp" type="image/webp"><img src="img/Model_main.jpg" alt=""></picture></div>
-              <div class="gb_img gb_img_6" data-target="img_mainbox_6"><picture><source srcset="img/senator_main.webp" type="image/webp"><img src="img/senator_main.jpg" alt=""></picture></div>
-              <div class="gb_img gb_img_7" data-target="img_mainbox_7"><picture><source srcset="img/Fs_home.webp" type="image/webp"><img src="img/Fs_home.jpg" alt=""></picture></div>
-              <div class="gb_img gb_img_8" data-target="img_mainbox_8"><picture><source srcset="img/rialust_main.webp" type="image/webp"><img src="img/rialust_main.jpg" alt=""></picture></div>
-              <div class="gb_img gb_img_9" data-target="img_mainbox_9"><picture><source srcset="img/ekfood_main.webp" type="image/webp"><img src="img/ekfood_main.jpg" alt=""></picture></div>
-              <div class="gb_img gb_img_10" data-target="img_mainbox_10"><picture><source srcset="img/dr.doogy.webp" type="image/webp"><img src="img/dr.doogy.jpg" alt=""></picture></div>
+              <div class="gb_img gb_img_1" data-id="strip1" data-target="img_mainbox_1"><picture><source srcset="img/red_friesa.webp" type="image/webp"><img src="img/red_friesa.jpg" alt=""></picture></div>
+              <div class="gb_img gb_img_2" data-id="strip2" data-target="img_mainbox_2"><picture><source srcset="img/aston_martin_main.webp" type="image/webp"><img src="img/aston_martin_main.jpg" alt=""></picture></div>
+              <div class="gb_img gb_img_3" data-id="strip3" data-target="img_mainbox_3"><picture><source srcset="img/Landing_Memoj.webp" type="image/webp"><img src="img/Landing_Memoj.jpg" alt=""></picture></div>
+              <div class="gb_img gb_img_4" data-id="strip4" data-target="img_mainbox_4"><picture><source srcset="img/Landing_org.webp" type="image/webp"><img src="img/Landing_org.jpg" alt=""></picture></div>
+              <div class="gb_img gb_img_5" data-id="strip5" data-target="img_mainbox_5"><picture><source srcset="img/Model_main.webp" type="image/webp"><img src="img/Model_main.jpg" alt=""></picture></div>
+              <div class="gb_img gb_img_6" data-id="strip6" data-target="img_mainbox_6"><picture><source srcset="img/senator_main.webp" type="image/webp"><img src="img/senator_main.jpg" alt=""></picture></div>
+              <div class="gb_img gb_img_7" data-id="strip7" data-target="img_mainbox_7"><picture><source srcset="img/Fs_home.webp" type="image/webp"><img src="img/Fs_home.jpg" alt=""></picture></div>
+              <div class="gb_img gb_img_8" data-id="strip8" data-target="img_mainbox_8"><picture><source srcset="img/rialust_main.webp" type="image/webp"><img src="img/rialust_main.jpg" alt=""></picture></div>
+              <div class="gb_img gb_img_9" data-id="strip9" data-target="img_mainbox_9"><picture><source srcset="img/ekfood_main.webp" type="image/webp"><img src="img/ekfood_main.jpg" alt=""></picture></div>
+              <div class="gb_img gb_img_10" data-id="strip10" data-target="img_mainbox_10"><picture><source srcset="img/dr.doogy.webp" type="image/webp"><img src="img/dr.doogy.jpg" alt=""></picture></div>
             </div>
           </div>
           <div style="opacity: 0;" class="info_gradient"></div>
           <div class="scroll_box" data-scroll-container>
             <div class="scroll-section gallery-item" data-id="1" data-scroll-section>
           <div class="scroll_gallery">
-            <div id="img_mainbox_1" class="scroll_imgbox scroll_imgbox_one"><picture><source srcset="img/red_friesa.webp" type="image/webp"><img id="img_main_1" class="scroll_imgbox_img" src="img/red_friesa.jpg" alt=""></picture>
+            <div id="img_mainbox_1" data-id="strip1" class="scroll_imgbox scroll_imgbox_one"><picture><source srcset="img/red_friesa.webp" type="image/webp"><img id="img_main_1" class="scroll_imgbox_img" src="img/red_friesa.jpg" alt=""></picture>
                 <a id="link_home" href="index3.html"></a>
             </div>
-            <div id="img_mainbox_2" class="scroll_imgbox"><picture><source srcset="img/aston_martin_main.webp" type="image/webp"><img id="img_main_2" class="scroll_imgbox_img" src="img/aston_martin_main.jpg" alt=""></picture>
+            <div id="img_mainbox_2" data-id="strip2" class="scroll_imgbox"><picture><source srcset="img/aston_martin_main.webp" type="image/webp"><img id="img_main_2" class="scroll_imgbox_img" src="img/aston_martin_main.jpg" alt=""></picture>
               <a id="link_home" href="index4.html"></a>
             </div>
-            <div id="img_mainbox_3" class="scroll_imgbox"><picture><source srcset="img/Landing_Memoj.webp" type="image/webp"><img id="img_main_3" class="scroll_imgbox_img" src="img/Landing_Memoj.jpg" alt=""></picture>
+            <div id="img_mainbox_3" data-id="strip3" class="scroll_imgbox"><picture><source srcset="img/Landing_Memoj.webp" type="image/webp"><img id="img_main_3" class="scroll_imgbox_img" src="img/Landing_Memoj.jpg" alt=""></picture>
               <a id="link_home" href="index5.html"></a>
             </div>
-            <div id="img_mainbox_4" class="scroll_imgbox"><picture><source srcset="img/Landing_org.webp" type="image/webp"><img id="img_main_4" class="scroll_imgbox_img" src="img/Landing_org.jpg" alt=""></picture>
+            <div id="img_mainbox_4" data-id="strip4" class="scroll_imgbox"><picture><source srcset="img/Landing_org.webp" type="image/webp"><img id="img_main_4" class="scroll_imgbox_img" src="img/Landing_org.jpg" alt=""></picture>
             <a id="link_home" href="index6.html"></a></div>
-            <div id="img_mainbox_5" class="scroll_imgbox"><picture><source srcset="img/Model_main.webp" type="image/webp"><img id="img_main_5" class="scroll_imgbox_img" src="img/Model_main.jpg" alt=""></picture>
+            <div id="img_mainbox_5" data-id="strip5" class="scroll_imgbox"><picture><source srcset="img/Model_main.webp" type="image/webp"><img id="img_main_5" class="scroll_imgbox_img" src="img/Model_main.jpg" alt=""></picture>
             <a id="link_home" href="index7.html"></a></div>
-            <div id="img_mainbox_6" class="scroll_imgbox"><picture><source srcset="img/senator_main.webp" type="image/webp"><img id="img_main_6" class="scroll_imgbox_img" src="img/senator_main.jpg" alt=""></picture>
+            <div id="img_mainbox_6" data-id="strip6" class="scroll_imgbox"><picture><source srcset="img/senator_main.webp" type="image/webp"><img id="img_main_6" class="scroll_imgbox_img" src="img/senator_main.jpg" alt=""></picture>
             <a id="link_home" href="index8.html"></a></div>
-            <div id="img_mainbox_7" class="scroll_imgbox"><picture><source srcset="img/Fs_home.webp" type="image/webp"><img id="img_main_7" class="scroll_imgbox_img" src="img/Fs_home.jpg" alt=""></picture>
+            <div id="img_mainbox_7" data-id="strip7" class="scroll_imgbox"><picture><source srcset="img/Fs_home.webp" type="image/webp"><img id="img_main_7" class="scroll_imgbox_img" src="img/Fs_home.jpg" alt=""></picture>
             <a id="link_home" href="index9.html"></a></div>
-            <div id="img_mainbox_8" class="scroll_imgbox"><picture><source srcset="img/rialust_main.webp" type="image/webp"><img id="img_main_8" class="scroll_imgbox_img" src="img/rialust_main.jpg" alt=""></picture>
+            <div id="img_mainbox_8" data-id="strip8" class="scroll_imgbox"><picture><source srcset="img/rialust_main.webp" type="image/webp"><img id="img_main_8" class="scroll_imgbox_img" src="img/rialust_main.jpg" alt=""></picture>
             <a id="link_home" href="index10.html"></a></div>
-            <div id="img_mainbox_9" class="scroll_imgbox"><picture><source srcset="img/ekfood_main.webp" type="image/webp"><img id="img_main_9" class="scroll_imgbox_img" src="img/ekfood_main.jpg" alt=""></picture>
+            <div id="img_mainbox_9" data-id="strip9" class="scroll_imgbox"><picture><source srcset="img/ekfood_main.webp" type="image/webp"><img id="img_main_9" class="scroll_imgbox_img" src="img/ekfood_main.jpg" alt=""></picture>
             <a id="link_home" href="index11.html"></a></div>
-            <div id="img_mainbox_10" class="scroll_imgbox"><picture><source srcset="img/dr.doogy.webp" type="image/webp"><img id="img_main_10" class="scroll_imgbox_img" src="img/dr.doogy.jpg" alt=""></picture>
+            <div id="img_mainbox_10" data-id="strip10" class="scroll_imgbox"><picture><source srcset="img/dr.doogy.webp" type="image/webp"><img id="img_main_10" class="scroll_imgbox_img" src="img/dr.doogy.jpg" alt=""></picture>
             <a id="link_home" href="index12.html"></a></div>
           </div>
 
@@ -363,11 +366,36 @@
           </div>
 
 
-
-
 <div class="strip_main">
-    <h2 id="ChangeText" class="strip">
+    <h2 id="ChangeText " class="strip strip1">
       FRIESA
+    </h2>
+    <h2 id="ChangeText" class="strip strip2">
+      ASTON
+    </h2>
+    <h2 id="ChangeText" class="strip strip3">
+      MEMOJI
+    </h2>
+    <h2 id="ChangeText" class="strip strip4">
+      ORANGE
+    </h2>
+    <h2 id="ChangeText" class="strip strip5">
+      MODEL
+    </h2>
+    <h2 id="ChangeText" class="strip strip6">
+      SENATOR
+    </h2>
+    <h2 id="ChangeText" class="strip strip7">
+      FYBRID
+    </h2>
+    <h2 id="ChangeText" class="strip strip8">
+      RIAL UST
+    </h2>
+    <h2 id="ChangeText" class="strip strip9">
+      EKFOOD
+    </h2>
+    <h2 id="ChangeText" class="strip strip10">
+      DRDOOGY
     </h2>
   </div>
 <div class="g_back">
@@ -503,12 +531,12 @@
     </div>
   </main>
 </body>
-<script src="files/script /swup.js?_v=20230703185802"></script>
-<script src="files/script /locomotive.js?_v=20230703185802"></script>
-<script src="files/script /SwupProgressPlugin.min.js?_v=20230703185802"></script>
-<script src="files/script /script.js?_v=20230703185802" ></script>
+<script src="files/script /swup.js?_v=20230704004757"></script>
+<script src="files/script /locomotive.js?_v=20230704004757"></script>
+<script src="files/script /SwupProgressPlugin.min.js?_v=20230704004757"></script>
+<script src="files/script /script.js?_v=20230704004757" ></script>
 <footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js?_v=20230703185802"
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js?_v=20230704004757"
                 integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
                 crossorigin="anonymous"></script>
 </footer>
