--- a/index4.html
+++ b/index4.html
@@ -1,68 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.min.css?_v=20230704004757"></link>
-  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230704004757"></script>
-  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230704004757"></script>
-  <script src="https://unpkg.com/@swup/preload-plugin@2?_v=20230704004757"></script>
-  <script src="files/script /tilt.js?_v=20230704004757"></script>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230704004757" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css?_v=20230704004757" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-</head>
-<header>
-	<nav>
-		<li><a data-swup-preload href="index2.html">Work</a></li>
-		<li class="woks1"><a class="woks" href="index3.html"></a></li>
-		<li class="woks1"><a class="woks" href="index4.html"></a></li>
-		<li class="woks1"><a class="woks" href="index5.html"></a></li>
-		<li class="woks1"><a class="woks" href="index6.html"></a></li>
-		<li class="woks1"><a class="woks" href="index7.html"></a></li>
-		<li class="woks1"><a class="woks" href="index8.html"></a></li>
-		<li class="woks1"><a class="woks" href="index9.html"></a></li>
-		<li class="woks1"><a class="woks" href="index10.html"></a></li>
-		<li class="woks1"><a class="woks" href="index11.html"></a></li>
-		<li><a href="index.html">About</a></li>
-	</nav>
-<div id="preloader">
-	<div class="progress-bar_box">
-		<div class="progresss-bar-main">
-			<div class="progresss"></div>
-		</div>
-	</div>
-</div>
-<div class="rotate_box">
-	<div>
-		<div class="rotate">
-	<svg width="40%" height="40%" viewBox="0 0 4521 4468" fill="none" xmlns="http://www.w3.org/2000/svg">
-		<path
-			d="M607.76 2340C607.76 2308.8 633.056 2283.5 664.26 2283.5C695.464 2283.5 720.76 2308.8 720.76 2340L607.76 2340ZM664.26 2537.44L607.76 2537.44L664.26 2537.44ZM1834.26 3707.44L1834.26 3763.94L1834.26 3763.94L1834.26 3707.44ZM2228.67 3707.44L1663.67 4033.65L1663.67 3381.24L2228.67 3707.44ZM720.76 2340L720.76 2537.44L607.76 2537.44L607.76 2340L720.76 2340ZM720.76 2537.44C720.76 3152.41 1219.29 3650.94 1834.26 3650.94L1834.26 3763.94C1156.88 3763.94 607.76 3214.82 607.76 2537.44L720.76 2537.44Z"
-			fill="black" />
-		<path
-			d="M3912.59 2127.39C3912.59 2158.59 3887.29 2183.89 3856.09 2183.89C3824.88 2183.89 3799.59 2158.59 3799.59 2127.39L3912.59 2127.39ZM3856.09 1929.94L3912.59 1929.94L3856.09 1929.94ZM2686.09 759.94L2686.09 703.44L2686.09 703.44L2686.09 759.94ZM2291.68 759.94L2856.68 433.737L2856.68 1086.14L2291.68 759.94ZM3799.59 2127.39L3799.59 1929.94L3912.59 1929.94L3912.59 2127.39L3799.59 2127.39ZM3799.59 1929.94C3799.59 1314.97 3301.06 816.44 2686.09 816.44L2686.09 703.44C3363.47 703.44 3912.59 1252.56 3912.59 1929.94L3799.59 1929.94Z"
-			fill="black" />
-		<path fill-rule="evenodd" clip-rule="evenodd"
-			d="M850.447 1545.48C767.184 1628.75 767.184 1763.74 850.447 1847.01L2647.07 3643.63C2730.34 3726.89 2865.33 3726.89 2948.6 3643.63L3669.63 2922.6C3752.89 2839.33 3752.89 2704.34 3669.63 2621.07L1873.01 824.448C1789.74 741.185 1654.75 741.184 1571.48 824.448L850.447 1545.48ZM917.784 1577.07C851.963 1642.89 851.963 1749.6 917.783 1815.42L2678.06 3575.7C2743.88 3641.52 2850.6 3641.52 2916.42 3575.7L3601.1 2891.01C3666.92 2825.19 3666.92 2718.48 3601.1 2652.66L1840.83 892.38C1775.01 826.559 1668.29 826.559 1602.47 892.38L917.784 1577.07Z"
-			fill="black" stroke="black" stroke-width="41" />
-		<path
-			d="M1443.52 1225.06L1279.06 1389.52C1260.63 1407.95 1260.63 1437.83 1279.06 1456.26C1297.49 1474.69 1327.37 1474.69 1345.8 1456.26L1510.26 1291.8C1528.69 1273.37 1528.69 1243.49 1510.26 1225.06C1491.83 1206.63 1461.95 1206.63 1443.52 1225.06Z"
-			fill="black" stroke="black" stroke-width="11" />
-	</svg>
-	
-	
-		</div>
-		<h5>Please rotate your device.</h5>
-	</div>
-</div>
-
-</header>
-<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230704004757" />
-<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230704004757"></script> -->
+@@include('html/head.html',{})
+@@include('html/header.html',{})
+<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css" />
+<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js"></script> -->
 
 <body>
   <main id="swup" class="transition-fade">
@@ -118,12 +59,11 @@
           <div class="info_gradient"></div>
           <video class="video" id="my-video" loop loading="lazy" src="files/AstonMartin.mp4"></video>
           <div id="imgbox" class="imgbox imgbox_aston">
-            <img class="img_back_main" id="img_back_main" src="img/Back_Aston.jpg" alt="" data-scroll
-              data-scroll-speed="-5">
+            <img class="img_back_main" id="img_back_main" src="img/Back_Aston.jpg" alt="">
           </div>
         </div>
         <div class="pg-1_bk_1">
-          <picture><source srcset="img/Aston_main.webp" type="image/webp"><img width="100%" src="img/Aston_main.jpg" alt=""></picture>
+          <img width="100%" src="img/Aston_main.jpg" alt="">
         </div>
         <div class="pg-1_bk_0">
           <div class="row justify-content-end align-items-center d-flex">
@@ -145,16 +85,16 @@
 
             <div class="row d-flex justify-content-center">
               <div class="col-10 img_as ">
-                <picture><source srcset="img/Aston_8.webp" type="image/webp"><img class="imageload_ob" width="100%" src="img/Aston_8.jpg" alt=""></picture>
+                <img class="imageload_ob" width="100%" src="img/Aston_8.jpg" alt="">
               </div>
               <div class="col-10 img_as ">
-                <picture><source srcset="img/as_img_2.webp" type="image/webp"><img id="big_as_1" class="imageload_ob" width="100%" src="img/as_img_2.jpg" alt=""></picture>
+                <img id="big_as_1" class="imageload_ob" width="100%" src="img/as_img_2.jpg" alt="">
               </div>
               <div class="col-10 img_as ">
-                <picture><source srcset="img/as_img_3.webp" type="image/webp"><img id="big_as_2" class="imageload_ob" width="100%" src="img/as_img_3.jpg" alt=""></picture>
+                <img id="big_as_2" class="imageload_ob" width="100%" src="img/as_img_3.jpg" alt="">
               </div>
               <div class="col-10 img_as ">
-                <picture><source srcset="img/as_img_4.webp" type="image/webp"><img id="big_as_3" class="imageload_ob" width="100%" src="img/as_img_4.jpg" alt=""></picture>
+                <img id="big_as_3" class="imageload_ob" width="100%" src="img/as_img_4.jpg" alt="">
               </div>
             </div>
           </div>
@@ -165,7 +105,7 @@
               <div class="col text-center as_header">
                 <h2>Main colors</h2>
               </div>
-              <picture><source srcset="img/mac_as.webp" type="image/webp"><img class="bk_2_img" width="100%" src="img/mac_as.jpg" alt=""></picture>
+              <img class="bk_2_img" width="100%" src="img/mac_as.jpg" alt="">
 
               <div class="col-4 black0000">
                 <h3>#000000</h3>
@@ -218,7 +158,7 @@
           <div class="row justify-content-center w-2">
             <div class="col-10 position-relative">
               <h3 class="text-center">Next Project</h3>
-              <picture><source srcset="img/Landing_Memoj.webp" type="image/webp"><img class="mobile_pic" src="img/Landing_Memoj.jpg" alt=""></picture>
+              <img class="mobile_pic" src="img/Landing_Memoj.jpg" alt="">
               <div class="row row_info_main">
                 <div class="col-6">
                   <h2>MEMOJI</h2>
@@ -254,7 +194,7 @@
                 </div>
               </div>
               <div class="box_img scroll-image">
-                <picture><source srcset="img/Landing_Memoj.webp" type="image/webp"><img class="last_img " id="image" src="img/Landing_Memoj.jpg" alt=""></picture>
+                <img class="last_img " id="image" src="img/Landing_Memoj.jpg" alt="">
               </div>
             </div>
           </div>
@@ -270,8 +210,8 @@
 
 
 
-<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230704004757"></script>
-  <script src="https://cdn.blobity.dev/by.js?_v=20230704004757"></script> -->
+<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=..."></script>
+  <script src="https://cdn.blobity.dev/by.js"></script> -->
 
 
 
@@ -282,17 +222,13 @@
 
 
 
-<script src="files/script /swup.js?_v=20230704004757"></script>
-<script src="files/script /locomotive.js?_v=20230704004757"></script>
-<script src="files/script /SwupProgressPlugin.min.js?_v=20230704004757"></script>
+<script src="files/script /swup.js"></script>
+<script src="files/script /locomotive.js"></script>
+<script src="files/script /SwupProgressPlugin.min.js"></script>
 
-<script src="files/script /script.js?_v=20230704004757"></script>
+<script src="files/script /script.js"></script>
 
 
-<footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js?_v=20230704004757"
-                integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-                crossorigin="anonymous"></script>
-</footer>
+@@include('html/footer.html',{})
 
 </html>
