--- a/index4.html
+++ b/index4.html
@@ -85,16 +85,16 @@
 
             <div class="row d-flex justify-content-center">
               <div class="col-10 img_as ">
-                <img class="imageload_ob" width="100%" src="img/Aston_8.jpg" alt="">
+                <!-- <img class="imageload_ob" width="100%" src="img/Aston_8.jpg" alt=""> -->
               </div>
               <div class="col-10 img_as ">
-                <img id="big_as_1" class="imageload_ob" width="100%" src="img/as_img_2.jpg" alt="">
+                <!-- <img id="big_as_1" class="imageload_ob" width="100%" src="img/as_img_2.jpg" alt=""> -->
               </div>
               <div class="col-10 img_as ">
-                <img id="big_as_2" class="imageload_ob" width="100%" src="img/as_img_3.jpg" alt="">
+                <!-- <img id="big_as_2" class="imageload_ob" width="100%" src="img/as_img_3.jpg" alt=""> -->
               </div>
               <div class="col-10 img_as ">
-                <img id="big_as_3" class="imageload_ob" width="100%" src="img/as_img_4.jpg" alt="">
+                <!-- <img id="big_as_3" class="imageload_ob" width="100%" src="img/as_img_4.jpg" alt=""> -->
               </div>
             </div>
           </div>
@@ -105,7 +105,7 @@
               <div class="col text-center as_header">
                 <h2>Main colors</h2>
               </div>
-              <img class="bk_2_img" width="100%" src="img/mac_as.jpg" alt="">
+              <!-- <img class="bk_2_img" width="100%" src="img/mac_as.jpg" alt=""> -->
 
               <div class="col-4 black0000">
                 <h3>#000000</h3>
@@ -158,7 +158,7 @@
           <div class="row justify-content-center w-2">
             <div class="col-10 position-relative">
               <h3 class="text-center">Next Project</h3>
-              <img class="mobile_pic" src="img/Landing_Memoj.jpg" alt="">
+              <!-- <img class="mobile_pic" src="img/Landing_Memoj.jpg" alt=""> -->
               <div class="row row_info_main">
                 <div class="col-6">
                   <h2>MEMOJI</h2>
@@ -194,7 +194,7 @@
                 </div>
               </div>
               <div class="box_img scroll-image">
-                <img class="last_img " id="image" src="img/Landing_Memoj.jpg" alt="">
+                <!-- <img class="last_img " id="image" src="img/Landing_Memoj.jpg" alt=""> -->
               </div>
             </div>
           </div>
