--- a/index4.html
+++ b/index4.html
@@ -59,7 +59,8 @@
           <div class="info_gradient"></div>
           <video class="video" id="my-video" loop loading="lazy" src="files/AstonMartin.mp4"></video>
           <div id="imgbox" class="imgbox imgbox_aston">
-            <img class="img_back_main" id="img_back_main" src="img/Back_Aston.jpg" alt="">
+            <img class="img_back_main" id="img_back_main" src="img/Back_Aston.jpg" alt="" data-scroll
+              data-scroll-speed="-5">
           </div>
         </div>
         <div class="pg-1_bk_1">
@@ -85,16 +86,16 @@
 
             <div class="row d-flex justify-content-center">
               <div class="col-10 img_as ">
-                <!-- <img class="imageload_ob" width="100%" src="img/Aston_8.jpg" alt=""> -->
+                <img class="imageload_ob" width="100%" src="img/Aston_8.jpg" alt="">
               </div>
               <div class="col-10 img_as ">
-                <!-- <img id="big_as_1" class="imageload_ob" width="100%" src="img/as_img_2.jpg" alt=""> -->
+                <img id="big_as_1" class="imageload_ob" width="100%" src="img/as_img_2.jpg" alt="">
               </div>
               <div class="col-10 img_as ">
-                <!-- <img id="big_as_2" class="imageload_ob" width="100%" src="img/as_img_3.jpg" alt=""> -->
+                <img id="big_as_2" class="imageload_ob" width="100%" src="img/as_img_3.jpg" alt="">
               </div>
               <div class="col-10 img_as ">
-                <!-- <img id="big_as_3" class="imageload_ob" width="100%" src="img/as_img_4.jpg" alt=""> -->
+                <img id="big_as_3" class="imageload_ob" width="100%" src="img/as_img_4.jpg" alt="">
               </div>
             </div>
           </div>
@@ -105,7 +106,7 @@
               <div class="col text-center as_header">
                 <h2>Main colors</h2>
               </div>
-              <!-- <img class="bk_2_img" width="100%" src="img/mac_as.jpg" alt=""> -->
+              <img class="bk_2_img" width="100%" src="img/mac_as.jpg" alt="">
 
               <div class="col-4 black0000">
                 <h3>#000000</h3>
@@ -158,7 +159,7 @@
           <div class="row justify-content-center w-2">
             <div class="col-10 position-relative">
               <h3 class="text-center">Next Project</h3>
-              <!-- <img class="mobile_pic" src="img/Landing_Memoj.jpg" alt=""> -->
+              <img class="mobile_pic" src="img/Landing_Memoj.jpg" alt="">
               <div class="row row_info_main">
                 <div class="col-6">
                   <h2>MEMOJI</h2>
@@ -194,7 +195,7 @@
                 </div>
               </div>
               <div class="box_img scroll-image">
-                <!-- <img class="last_img " id="image" src="img/Landing_Memoj.jpg" alt=""> -->
+                <img class="last_img " id="image" src="img/Landing_Memoj.jpg" alt="">
               </div>
             </div>
           </div>
