--- a/index4.html
+++ b/index4.html
@@ -84,7 +84,7 @@
         <div class="pg-1_bk_2 pg-1_bk_2_aston">
           <div class="container">
 
-            <div class="row d-flex justify-content-center">
+            <!-- <div class="row d-flex justify-content-center">
               <div class="col-10 img_as ">
                 <img class="imageload_ob" width="100%" src="img/Aston_8.jpg" alt="">
               </div>
@@ -97,7 +97,7 @@
               <div class="col-10 img_as ">
                 <img id="big_as_3" class="imageload_ob" width="100%" src="img/as_img_4.jpg" alt="">
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
         <div class="pg-1_bk_3">
