--- a/index4.html
+++ b/index4.html
@@ -4,15 +4,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.min.css?_v=20230704163830"></link>
-  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230704163830"></script>
-  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230704163830"></script>
-  <script src="https://unpkg.com/@swup/preload-plugin@2?_v=20230704163830"></script>
-  <script src="files/script /tilt.js?_v=20230704163830"></script>
+  <link rel="stylesheet" href="css/style.min.css?_v=20230704164702"></link>
+  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230704164702"></script>
+  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230704164702"></script>
+  <script src="https://unpkg.com/@swup/preload-plugin@2?_v=20230704164702"></script>
+  <script src="files/script /tilt.js?_v=20230704164702"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230704163830" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css?_v=20230704163830" rel="stylesheet"
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230704164702" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css?_v=20230704164702" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <header>
@@ -61,8 +61,8 @@
 </div>
 
 </header>
-<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230704163830" />
-<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230704163830"></script> -->
+<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230704164702" />
+<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230704164702"></script> -->
 
 <body>
   <main id="swup" class="transition-fade">
@@ -119,7 +119,7 @@
           </div>
           <div class="info_gradient"></div>
           <video class="video" id="my-video" loop loading="lazy" src="files/AstonMartin.mp4"></video>
-          <div id="imgbox" class="imgbox">
+          <div id="imgbox" class="imgbox imgbox_aston">
             <picture><source srcset="img/Back_Aston.webp" type="image/webp"><img class="img_back_main" id="img_back_main" src="img/Back_Aston.jpg" alt=""></picture>
           </div>
         </div>
@@ -192,7 +192,7 @@
         <div class="pg-1_bk_3">
           <div class="container">
             <div class="row">
-              <div class="col text-center">
+              <div class="col text-center as_header" >
                 <h2>Convenient chat</h2>
               </div>
               <picture><source srcset="img/Back_4.webp" type="image/webp"><img class="bk_2_img" width="100%" src="img/Back_4.jpg" alt=""></picture>
@@ -330,8 +330,8 @@
 
 
 
-<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230704163830"></script>
-  <script src="https://cdn.blobity.dev/by.js?_v=20230704163830"></script> -->
+<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230704164702"></script>
+  <script src="https://cdn.blobity.dev/by.js?_v=20230704164702"></script> -->
 
 
 
@@ -342,15 +342,15 @@
 
 
 
-<script src="files/script /swup.js?_v=20230704163830"></script>
-<script src="files/script /locomotive.js?_v=20230704163830"></script>
-<script src="files/script /SwupProgressPlugin.min.js?_v=20230704163830"></script>
+<script src="files/script /swup.js?_v=20230704164702"></script>
+<script src="files/script /locomotive.js?_v=20230704164702"></script>
+<script src="files/script /SwupProgressPlugin.min.js?_v=20230704164702"></script>
 
-<script src="files/script /script.js?_v=20230704163830"></script>
+<script src="files/script /script.js?_v=20230704164702"></script>
 
 
 <footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js?_v=20230704163830"
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js?_v=20230704164702"
                 integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
                 crossorigin="anonymous"></script>
 </footer>
