--- a/index4.html
+++ b/index4.html
@@ -4,15 +4,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.min.css?_v=20230704164702"></link>
-  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230704164702"></script>
-  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230704164702"></script>
-  <script src="https://unpkg.com/@swup/preload-plugin@2?_v=20230704164702"></script>
-  <script src="files/script /tilt.js?_v=20230704164702"></script>
+  <link rel="stylesheet" href="css/style.min.css?_v=20230704170245"></link>
+  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230704170245"></script>
+  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230704170245"></script>
+  <script src="https://unpkg.com/@swup/preload-plugin@2?_v=20230704170245"></script>
+  <script src="files/script /tilt.js?_v=20230704170245"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230704164702" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css?_v=20230704164702" rel="stylesheet"
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230704170245" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css?_v=20230704170245" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <header>
@@ -61,8 +61,8 @@
 </div>
 
 </header>
-<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230704164702" />
-<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230704164702"></script> -->
+<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230704170245" />
+<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230704170245"></script> -->
 
 <body>
   <main id="swup" class="transition-fade">
@@ -147,11 +147,11 @@
                 </div>
               </div>
               <div class="col-7 mob_on">
-                <picture><source srcset="img/Aston_main.webp" type="image/webp"><img width="100%" src="img/Aston_main.jpg" alt=""></picture>
               </div>
-
+              
             </div>
           </div>
+          <picture><source srcset="img/Aston_main.webp" type="image/webp"><img width="100%" src="img/Aston_main.jpg" alt=""></picture>
         </div>
         <div class="pg-1_bk_0">
           <div class="row justify-content-end align-items-center d-flex">
@@ -197,15 +197,15 @@
               </div>
               <picture><source srcset="img/Back_4.webp" type="image/webp"><img class="bk_2_img" width="100%" src="img/Back_4.jpg" alt=""></picture>
 
-              <div class="col-4 black0000">
-                <h3>#000000</h3>
-              </div>
-              <div class="col-4 b202020">
-                <h3>#202020</h3>
-              </div>
-              <div class="col-4 b6c1d32">
-                <h3>#6c1d32</h3>
-              </div>
+            <div class="col-4 black0000">
+              <h3>#000000</h3>
+            </div>
+            <div class="col-4 b202020 b20958B">
+              <h3>#20958B</h3>
+            </div>
+            <div class="col-4 b6c1d32 b1E7A51">
+              <h3>#1E7A51</h3>
+            </div>
             </div>
           </div>
           <div class="container">
@@ -330,8 +330,8 @@
 
 
 
-<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230704164702"></script>
-  <script src="https://cdn.blobity.dev/by.js?_v=20230704164702"></script> -->
+<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230704170245"></script>
+  <script src="https://cdn.blobity.dev/by.js?_v=20230704170245"></script> -->
 
 
 
@@ -342,15 +342,15 @@
 
 
 
-<script src="files/script /swup.js?_v=20230704164702"></script>
-<script src="files/script /locomotive.js?_v=20230704164702"></script>
-<script src="files/script /SwupProgressPlugin.min.js?_v=20230704164702"></script>
+<script src="files/script /swup.js?_v=20230704170245"></script>
+<script src="files/script /locomotive.js?_v=20230704170245"></script>
+<script src="files/script /SwupProgressPlugin.min.js?_v=20230704170245"></script>
 
-<script src="files/script /script.js?_v=20230704164702"></script>
+<script src="files/script /script.js?_v=20230704170245"></script>
 
 
 <footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js?_v=20230704164702"
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js?_v=20230704170245"
                 integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
                 crossorigin="anonymous"></script>
 </footer>
