--- a/index4.html
+++ b/index4.html
@@ -4,15 +4,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.min.css?_v=20230704172900"></link>
-  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230704172900"></script>
-  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230704172900"></script>
-  <script src="https://unpkg.com/@swup/preload-plugin@2?_v=20230704172900"></script>
-  <script src="files/script /tilt.js?_v=20230704172900"></script>
+  <link rel="stylesheet" href="css/style.min.css?_v=20230704181830"></link>
+  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230704181830"></script>
+  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230704181830"></script>
+  <script src="https://unpkg.com/@swup/preload-plugin@2?_v=20230704181830"></script>
+  <script src="files/script /tilt.js?_v=20230704181830"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230704172900" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css?_v=20230704172900" rel="stylesheet"
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230704181830" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css?_v=20230704181830" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <header>
@@ -61,8 +61,8 @@
 </div>
 
 </header>
-<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230704172900" />
-<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230704172900"></script> -->
+<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230704181830" />
+<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230704181830"></script> -->
 
 <body>
   <main id="swup" class="transition-fade">
@@ -142,12 +142,12 @@
 
           </div>
         </div>
-        <div class="pg-1_bk_2 pg-1_bk_2_aston">
+        <div style="padding-bottom: 0px;" class="pg-1_bk_2 pg-1_bk_2_aston">
 
               <div class="container text_plus_2">
                 <div class="row">
                   <div class="col-12">
-                    <picture><source srcset="img/Friesa_reg.webp" type="image/webp"><img width="100%" src="img/Friesa_reg.jpg" alt=""></picture>
+                    <picture><source srcset="img/Aston_post1.webp" type="image/webp"><img width="100%" src="img/Aston_post1.jpg" alt=""></picture>
                   </div>
                 </div>
                 <div class="row">
@@ -160,7 +160,7 @@
                 </div>
                 <div class="row">
                   <div class="col-12">
-                    <picture><source srcset="img/Friesa_phones.webp" type="image/webp"><img width="100%" src="img/Friesa_phones.jpg" alt=""></picture>
+                    <picture><source srcset="img/Aston_post2.webp" type="image/webp"><img width="100%" src="img/Aston_post2.jpg" alt=""></picture>
                   </div>
                 </div>
                 <div class="row">
@@ -174,20 +174,10 @@
                   </div>
                   <div class="col-2"></div>
                 </div>
-                <div class="row">
+                <div style="padding-bottom: 0px;" class="row">
                   <div class="col-12">
-                    <picture><source srcset="img/Friesa_Mac`s.webp" type="image/webp"><img width="100%" src="img/Friesa_Mac`s.jpg" alt=""></picture>
+                    <picture><source srcset="img/Aston_post3.webp" type="image/webp"><img style="margin-bottom: 0px;" width="100%" src="img/Aston_post3.jpg" alt=""></picture>
                   </div>
-                </div>
-                <div class="row">
-                  <div class="col-2"></div>
-                  <div class="col-8 text-center">
-                    <h3>Our main page interface is designed for maximum ease-of-use. With a simple and intuitive layout, you can
-                      quickly find
-                      the movies you want to watch and start streaming them in seconds. Plus, with our visually stunning design and
-                      personalized recommendations, you'll never run out of great movies to discover.</h3>
-                  </div>
-                  <div class="col-2"></div>
                 </div>
               </div>
         </div>
@@ -236,7 +226,7 @@
                 <picture><source srcset="img/Iphone1_5.webp" type="image/webp"><img width="100%" src="img/Iphone1_5.jpg" alt=""></picture>
               </div>
             </div>
-            <div class="row">
+            <div class="row text_plus">
               <div class="col-6">
                 <h3>- The Aston Martin website design showcases a host of advantages that elevate the user's browsing experience and
                 exemplify
@@ -332,8 +322,8 @@
 
 
 
-<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230704172900"></script>
-  <script src="https://cdn.blobity.dev/by.js?_v=20230704172900"></script> -->
+<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230704181830"></script>
+  <script src="https://cdn.blobity.dev/by.js?_v=20230704181830"></script> -->
 
 
 
@@ -344,15 +334,15 @@
 
 
 
-<script src="files/script /swup.js?_v=20230704172900"></script>
-<script src="files/script /locomotive.js?_v=20230704172900"></script>
-<script src="files/script /SwupProgressPlugin.min.js?_v=20230704172900"></script>
+<script src="files/script /swup.js?_v=20230704181830"></script>
+<script src="files/script /locomotive.js?_v=20230704181830"></script>
+<script src="files/script /SwupProgressPlugin.min.js?_v=20230704181830"></script>
 
-<script src="files/script /script.js?_v=20230704172900"></script>
+<script src="files/script /script.js?_v=20230704181830"></script>
 
 
 <footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js?_v=20230704172900"
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js?_v=20230704181830"
                 integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
                 crossorigin="anonymous"></script>
 </footer>
