--- a/index4.html
+++ b/index4.html
@@ -4,15 +4,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.min.css?_v=20230704190957"></link>
-  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230704190957"></script>
-  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230704190957"></script>
-  <script src="https://unpkg.com/@swup/preload-plugin@2?_v=20230704190957"></script>
-  <script src="files/script /tilt.js?_v=20230704190957"></script>
+  <link rel="stylesheet" href="css/style.min.css?_v=20230704191612"></link>
+  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230704191612"></script>
+  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230704191612"></script>
+  <script src="https://unpkg.com/@swup/preload-plugin@2?_v=20230704191612"></script>
+  <script src="files/script /tilt.js?_v=20230704191612"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230704190957" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css?_v=20230704190957" rel="stylesheet"
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230704191612" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css?_v=20230704191612" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <header>
@@ -61,8 +61,8 @@
 </div>
 
 </header>
-<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230704190957" />
-<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230704190957"></script> -->
+<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230704191612" />
+<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230704191612"></script> -->
 
 <body>
   <main id="swup" class="transition-fade">
@@ -158,23 +158,14 @@
                   </div>
                   <div class="col-2"></div>
                 </div>
-                </div>
-        </div>
-        <div style="background: radial-gradient(circle, rgba(0,117,86,1) 0%, rgba(0,37,27,1) 87%);" class="pg-1_bk_2">
-              <div class="container">
                 <div class="row">
-                  <div class="col-6">
+                  <div class="col-12">
                     <picture><source srcset="img/Aston_post4.webp" type="image/webp"><img width="100%" src="img/Aston_post4.jpg" alt=""></picture>
                   </div>
-                  <div class="col-6">
+                  <div class="col-12">
                     <picture><source srcset="img/Aston_post5.webp" type="image/webp"><img width="100%" src="img/Aston_post5.jpg" alt=""></picture>
                   </div>
                 </div>
-              </div>
-        </div>
-        <div style="padding-bottom: 0px;" class="pg-1_bk_2 pg-1_bk_2_aston">
-
-              <div class="container text_plus_2">
                 <div class="row">
                   <div class="col-2"></div>
                   <div class="col-8 text-center">
@@ -188,11 +179,10 @@
                 </div>
                 <div style="padding-bottom: 0px;" class="row">
                   <div class="col-12">
-                    <picture><source srcset="img/Aston_post3.webp" type="image/webp"><img style="margin-bottom: 0px;" width="100%" src="img/Aston_post3.png" alt=""></picture>
+                    <picture><source srcset="img/Aston_post3.webp" type="image/webp"><img style="margin-bottom: 0px;" width="100%" src="img/Aston_post3.jpg" alt=""></picture>
                   </div>
                 </div>
               </div>
-        </div>
         </div>
         <div class="pg-1_bk_3">
           <div class="container">
@@ -335,8 +325,8 @@
 
 
 
-<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230704190957"></script>
-  <script src="https://cdn.blobity.dev/by.js?_v=20230704190957"></script> -->
+<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230704191612"></script>
+  <script src="https://cdn.blobity.dev/by.js?_v=20230704191612"></script> -->
 
 
 
@@ -347,15 +337,15 @@
 
 
 
-<script src="files/script /swup.js?_v=20230704190957"></script>
-<script src="files/script /locomotive.js?_v=20230704190957"></script>
-<script src="files/script /SwupProgressPlugin.min.js?_v=20230704190957"></script>
+<script src="files/script /swup.js?_v=20230704191612"></script>
+<script src="files/script /locomotive.js?_v=20230704191612"></script>
+<script src="files/script /SwupProgressPlugin.min.js?_v=20230704191612"></script>
 
-<script src="files/script /script.js?_v=20230704190957"></script>
+<script src="files/script /script.js?_v=20230704191612"></script>
 
 
 <footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js?_v=20230704190957"
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js?_v=20230704191612"
                 integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
                 crossorigin="anonymous"></script>
 </footer>
