--- a/index5.html
+++ b/index5.html
@@ -4,15 +4,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.min.css?_v=20230704211803"></link>
-  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230704211803"></script>
-  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230704211803"></script>
-  <script src="https://unpkg.com/@swup/preload-plugin@2?_v=20230704211803"></script>
-  <script src="files/script /tilt.js?_v=20230704211803"></script>
+  <link rel="stylesheet" href="css/style.min.css?_v=20230704215249"></link>
+  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230704215249"></script>
+  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230704215249"></script>
+  <script src="https://unpkg.com/@swup/preload-plugin@2?_v=20230704215249"></script>
+  <script src="files/script /tilt.js?_v=20230704215249"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230704211803" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css?_v=20230704211803" rel="stylesheet"
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230704215249" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css?_v=20230704215249" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <header>
@@ -61,8 +61,8 @@
 </div>
 
 </header>
-<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230704211803" />
-<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230704211803"></script> -->
+<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230704215249" />
+<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230704215249"></script> -->
 
 <body>
   <main id="swup" class="transition-fade">
@@ -79,7 +79,7 @@
               </div>
           
               <div class="col-5 align-items-center info_up_box ">
-                <h3 style="font-size: 0.6rem;">"Minimal Beauty" Landing Page is a web design masterpiece that embodies simplicity
+                <h3 style="font-size: 0.6rem;">Landing Page is a web design masterpiece that embodies simplicity
                   and elegance. With its clean and
                   refined interface, this project presents a captivating online experience for users seeking a minimalist approach
                   to
@@ -109,13 +109,9 @@
             <h2>About</h2>
             <div class="col-4 mob_off"></div>
             <div class="col-4  mob_on justify-content-end align-items-center d-flex">
-              <p>"Aston Martin Website" is a web design project that showcases a stunning and dynamic interface for the
-                official ASTON
-                MARTIN® website. The project aims to provide a seamless and immersive online experience for Aston Martin
-                potential
-                customers. The project serves as a demonstration to showcase the likely appearance of the service, with
-                all materials
-                used belonging to ASTON MARTIN®.</p>
+              <p>Landing Page is a web design masterpiece that embodies simplicity and elegance. With its clean and
+              refined interface, this project presents a captivating online experience for users seeking a minimalist approach to
+              their landing page design.</p>
             </div>
             <div class="col-4 mob_off"></div>
 
@@ -144,7 +140,7 @@
               </div>
               <div style="padding-bottom: 0px;" class="row">
                 <div class="col-12">
-                  <picture><source srcset="img/memoji_mac.webp" type="image/webp"><img style="margin-bottom: 0px;" width="100%" src="img/memoji_mac.png" alt=""></picture>
+                  <picture><source srcset="img/memoji_macbook.webp" type="image/webp"><img style="margin-bottom: 0px;" width="100%" src="img/memoji_macbook.png" alt=""></picture>
                 </div>
               </div>
             </div>
@@ -155,70 +151,43 @@
                 <div class="col text-center as_header">
                   <h2>Main colors</h2>
                 </div>
-                <picture><source srcset="img/Aston_mac.webp" type="image/webp"><img class="bk_2_img" width="100%" src="img/Aston_mac.jpg" alt=""></picture>
+                <picture><source srcset="img/memoji_imac.webp" type="image/webp"><img class="bk_2_img" width="100%" src="img/memoji_imac.jpg" alt=""></picture>
 
-                <div class="col-4 black0000">
-                  <h3>#000000</h3>
-                </div>
-                <div class="col-4 b202020 b20958B">
-                  <h3>#20958B</h3>
-                </div>
-                <div class="col-4 b6c1d32 b1E7A51">
-                  <h3>#1E7A51</h3>
-                </div>
+              <div class="col-4 black0000 bec3c5c">
+                <h3>#ec3c5c</h3>
+              </div>
+              <div class="col-4 b202020 ba4c1fd">
+                <h3>#a4c1fd</h3>
+              </div>
+              <div class="col-4 b6c1d32 be5e4a2">
+                <h3>#e5e4a2</h3>
+              </div>
               </div>
             </div>
             <div class="container">
               <div class="row text_plus">
-                <div class="col-6">
-                  <h3>- The Aston Martin website design showcases a host of advantages that elevate the user's browsing
-                    experience and
-                    exemplify
-                    the brand's elegance and performance. With a focus on user experience (UX) and user interface (UI)
-                    design, this
-                    captivating website boasts a range of features that set it apart from the rest.</h3>
-                </div>
-                <div class="col-6">
-                  <h3>- One of the standout advantages is the implementation of a dynamic menu, which seamlessly adapts
-                    to the user's needs.
-                    This innovative feature ensures effortless navigation, allowing visitors to explore various sections
-                    of the website with
-                    ease. Whether they are searching for specific models, discovering the latest innovations, or
-                    exploring the rich heritage
-                    of Aston Martin, the dynamic menu intuitively presents the most relevant options, resulting in a
-                    seamless browsing
-                    experience.</h3>
-                </div>
-                <div class="col-6">
-                  <h3>- Moreover, the UX/UI design of the Aston Martin website is meticulously crafted to offer a
-                    visually stunning and
-                    engaging
-                    interface. The user interface combines sleek aesthetics with intuitive functionality, enabling
-                    visitors to interact
-                    effortlessly with the content. Through a harmonious blend of striking visuals, well-organized
-                    layouts, and carefully
-                    chosen typography, the design creates a sophisticated and immersive experience that reflects the
-                    brand's prestigious
-                    image.</h3>
-                </div>
-                <div class="col-6">
-                  <h3>- Additionally, the Aston Martin website design places emphasis on optimal usability, ensuring
-                    that every visitor can
-                    access desired information efficiently. From clear and concise call-to-action buttons to
-                    thoughtfully placed menus and
-                    filters, every element is strategically positioned to guide users through their journey on the
-                    website. This
-                    user-centric approach guarantees a seamless interaction, enabling visitors to effortlessly find the
-                    information they
-                    seek and engage with Aston Martin's exceptional products and services.</h3>
-                </div>
-                <h3>- In summary, the Aston Martin website design stands out by incorporating a dynamic menu that
-                  intuitively adapts to the
-                  user's needs, a visually stunning UX/UI design that exudes elegance, and an emphasis on optimal
-                  usability. These
-                  advantages collectively create an immersive and effortless browsing experience, allowing visitors to
-                  delve into the
-                  world of Aston Martin and discover the epitome of automotive luxury and performance..</h3>
+              <div class="col-6">
+                <h3>- Welcome to minimalist Landing Page design! With its simple and sleek layout, our page provides a seamless
+                  browsing
+                  experience. Featuring a user-friendly interface, you can effortlessly explore our product offerings and place orders
+                  with just a few clicks.</h3>
+              </div>
+              <div class="col-6">
+                <h3>- Our streamlined design focuses on presenting key information in a concise manner, ensuring that you can quickly
+                  find the
+                  items you desire. Selecting and ordering products is a breeze, allowing you to complete your purchase in no time.
+                </h3>
+              </div>
+              <div class="col-6">
+                <h3>- To showcase the satisfaction of our customers, we have included a dedicated testimonial section. This column
+                  displays
+                  genuine reviews from our happy customers, providing you with valuable insights about our products and services.</h3>
+              </div>
+              <div class="col-6">
+                <h3>- Adding a touch of fun and personality, we have incorporated interesting and expressive emojis throughout the
+                  page. These
+                  delightful visuals not only bring a smile to your face but also enhance the overall user experience.</h3>
+              </div>
               </div>
             </div>
           </div>
@@ -282,8 +251,8 @@
 
 
 
-<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230704211803"></script>
-  <script src="https://cdn.blobity.dev/by.js?_v=20230704211803"></script> -->
+<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230704215249"></script>
+  <script src="https://cdn.blobity.dev/by.js?_v=20230704215249"></script> -->
 
 
 
@@ -294,15 +263,15 @@
 
 
 
-<script src="files/script /swup.js?_v=20230704211803"></script>
-<script src="files/script /locomotive.js?_v=20230704211803"></script>
-<script src="files/script /SwupProgressPlugin.min.js?_v=20230704211803"></script>
+<script src="files/script /swup.js?_v=20230704215249"></script>
+<script src="files/script /locomotive.js?_v=20230704215249"></script>
+<script src="files/script /SwupProgressPlugin.min.js?_v=20230704215249"></script>
 
-<script src="files/script /script.js?_v=20230704211803"></script>
+<script src="files/script /script.js?_v=20230704215249"></script>
 
 
 <footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js?_v=20230704211803"
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js?_v=20230704215249"
                 integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
                 crossorigin="anonymous"></script>
 </footer>
